--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -85,6 +85,7 @@
     </ul>
   </nav>
 
+
   <main>
 
     <h2>Preston Idaho</h2>
@@ -190,7 +191,7 @@
       </p>
 
     </article>
-  
+
     <div>
       <h3>Winter Survival Kit For Your Vehicle</h3>
       <figure class="video">
@@ -198,7 +199,6 @@
                 height="315"
                 src="https://www.youtube.com/embed/0C2e2m-8Gu4"
                 title="YouTube video player"
-                
                 allowfullscreen>
         </iframe>
         <figcaption>NOAA: This video provides a quick overview of what to include in your vehicle's winter survival kit.
@@ -206,13 +206,17 @@
       </figure>
     </div>
 
+
     <div id="events">
       <h3 class="underline">Mark Your Calendar</h3>
       <div class="events">
+      </div>
     </div>
-    
 
   </main>
+
+
+
 
   <footer>
 
