final this and that

--- a/lesson11/fish-haven.html
+++ b/lesson11/fish-haven.html
@@ -179,25 +179,25 @@
              data-src="images/fish-heaven-images/winter-precipitation-960.jpg"
              alt="winter winter precipitation information">
       </picture>
-      <figcaption>NOAA: &nbsp; <a href="https://www.weather.gov/fsd/winter_preparedness">Winter Preparedness</a>
-      </figcaption>
+      <p>NOAA: &nbsp; <a href="https://www.weather.gov/fsd/winter_preparedness">Winter Preparedness</a>
+      </p>
     </div>
 
     <ul>
       <li>
-        <bold><strong>Snow:</strong></bold> Frozen precipitation that never melts during its descent to the surface
+        <span class="bold">Snow:</span> Frozen precipitation that never melts during its descent to the surface
       </li>
       <li>
-        <bold><strong>Sleet:</strong></bold> Frozen precipitation falls through a warm layer and melts, then falls
+        <span class="bold">Sleet:</span> Frozen precipitation falls through a warm layer and melts, then falls
         through another cold layer that is deep enough to refreeze the raindrops into pellets before hitting the ground.
       </li>
       <li>
-        <bold><strong>Freezing Rain:</strong></bold> Frozen precipitation falls through a warm layer and melts, then
+        <span class="bold">Freezing Rain:</span> Frozen precipitation falls through a warm layer and melts, then
         falls on surfaces that are below freezing and solidifies, resulting in an even coating of ice on streets, trees,
         cars, and power lines.
       </li>
       <li>
-        <bold><strong>Rain:</strong></bold> Frozen precipitation that falls through a deep warm layer and melts into
+        <span class="bold">Rain:</span> Frozen precipitation that falls through a deep warm layer and melts into
         liquid before reaching the ground. Water droplets are classified as rain if they are 0.5 millimeters or greater
         in size, whereas droplets smaller than 0.5 millimeters are classified as drizzle.
       </li>
@@ -206,6 +206,7 @@
     <div id="events">
       <h3 class="underline">Mark Your Calendar</h3>
       <div class="events">
+      </div>
     </div>
 
   </main>
