--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible"
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-
   <title>Soda Springs Weather Site</title>
   <meta name="description"
         content="This is the Soda Springs, Idaho weather page.">
-
   <link rel="shortcut icon"
         href="images/full-site-images/favicon.ico">
-
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
   <link rel="stylesheet"
         href="css/full-site-css/small.css">
   <link rel="stylesheet"
         href="css/full-site-css/medium.css">.
   <link rel="stylesheet"
         href="css/full-site-css/large.css">
-
   <link rel="stylesheet"
         href="css/soda-springs-css/small.css">
   <link rel="stylesheet"
         href="css/soda-springs-css/medium.css">
   <link rel="stylesheet"
         href="css/soda-springs-css/large.css">
-
   <script defer
           src="js/soda-springs-js/weather-summary.js"></script>
   <script defer
           src="js/soda-springs-js/five-day-forecast.js"></script>
   <script defer
           src="js/soda-springs-js/events.js"></script>
-
-
   <script defer
           src="js/full-site-js/script.js"></script>
   <script defer
           src="js/full-site-js/lazy-loading.js"></script>
-
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
@@ -52,16 +44,12 @@
         crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
-
   <header>
-
     <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
-
     <section>
       <h1>Sunshine Forecast</h1>
       <p>We take our day sunny side up.</p>
@@ -79,11 +67,8 @@
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
-
   <main>
-
     <h2>Soda Springs</h2>
-
     <div class="hero-container">
       <picture class="hero-ph">
         <source media="(max-width: 300px)"
@@ -95,7 +80,6 @@
         <img src="images/soda-springs-images/soda-springs-960.jpg"
              alt="hero images">
       </picture>
-
       <section class="weathersummary">
         <h3>Weather Summary</h3>
         <div class="ws-grid">
@@ -114,7 +98,6 @@
         </div>
       </section>
     </div>
-
     <h3>5 Day Forecast</h3>
     <div class="forecast">
       <div class="forecast-day">
@@ -126,7 +109,6 @@
         <div><span id="high1"
                 class="wk-h"></span>&deg;F</div>
       </div>
-
       <div class="forecast-day">
         <div class="day"
              id="day2"></div>
@@ -136,7 +118,6 @@
         <div><span id="high2"
                 class="wk-h">56</span>&deg;F</div>
       </div>
-
       <div class="forecast-day">
         <div class="day"
              id="day3"></div>
@@ -146,7 +127,6 @@
         <div><span id="high3"
                 class="wk-h">56</span>&deg;F</div>
       </div>
-
       <div class="forecast-day">
         <div class="day"
              id="day4"></div>
@@ -156,7 +136,6 @@
         <div><span id="high4"
                 class="wk-h">56</span>&deg;F</div>
       </div>
-
       <div class="forecast-day">
         <div class="day"
              id="day5"></div>
@@ -167,8 +146,6 @@
                 class="wk-h">56</span>&deg;F</div>
       </div>
     </div>
-
-
     <h3>Myth Busters</h3>
     <div class="picture-container">
       <picture class="myth-pic">
@@ -193,7 +170,6 @@
              data-src="images/soda-springs-images/mb-2-960.jpg"
              alt="myth: it can be too cold for snow">
       </picture>
-
       <picture class="myth-pic">
         <source media="(max-width: 300px)"
                 srcset="images/soda-springs-images/mb-4-300.jpg">
@@ -205,19 +181,15 @@
              data-src="images/soda-springs-images/mb-4-960.jpg"
              alt="myth: going outside in cold weather will make you sick">
       </picture>
-
-      <figcaption>* This continent is complements of NOAA website.</figcaption>
+      <p>* This continent is complements of NOAA website.</p>
     </div>
-
     <div id="events">
       <h3 class="underline">Mark Your Calendar</h3>
       <div class="events">
       </div>
-
+    </div>
   </main>
-
   <footer>
-
     <div class="vcard">
       <div class="org">Sunshine Forecast</div>
       <div class="adr">
@@ -232,11 +204,9 @@
       <br>
       <div class="email"><a href="mailto:sunshineforecast@gmail.com">sunshineforecast@gmail.com</a>
       </div>
-
     </div>
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
-
       <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
       <a href="#"><img src="images/full-site-images/instagram.png"
@@ -244,8 +214,8 @@
       <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
-
   </footer>
 </body>
+
 
 </html>
