--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -30,7 +30,7 @@
  
 
   <script defer
-          src="js/full-site-js/"></script>
+          src="js/full-site-js/script.js"></script>
 
 </head>
 
@@ -66,12 +66,12 @@
       <br>
       🌪️ &nbsp; &nbsp;🌀 &nbsp; &nbsp;🌩️ &nbsp; &nbsp;❄️ &nbsp; &nbsp; ☔</h2>
     
-      <figure>
+      <figure class="video">
         <iframe width="560"
                 height="315"
                 src="https://www.youtube.com/embed/7DgFPgJTxP8"
                 title="NOAA's Weather-Ready Nation: Be a Force of Nature!"
-                class="video"
+                
                 allowfullscreen></iframe>
         <figcaption>NOAA's Weather-Ready Nation: Be a Force of Nature!</figcaption>
       </figure>
