--- a/delcitychamberofcommerce/index.html
+++ b/delcitychamberofcommerce/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
 
-  <title>#</title>
+  <title>Del City Chamber of Commerce</title>
   <meta name="description"
         content="#">
 
   <link rel="shortcut icon"
-        href="images/full-site-images/favicon.ico">
+        href="images/plane.ico">
 
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -46,38 +46,38 @@
 
   <header>
 
-    <img src="images/full-site-images/sun-weather-icon.png"
-         alt="#">
+    <img src="images/icon.png"
+         alt="an terra cotta color plane icon">
 
     <section>
       <h1>Del City</h1>
       <p>Chamber of Commerce</p>
     </section>
-  </header>
-  <nav>
-    <ul class="navigation">
-      <li><a class="menu"
-           href="#">&#9776; Menu</a></li>
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">City</a></li>
-      <li><a href="#">Join</a></li>
-      <li><a href="#">Business</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
 
+    <nav>
+      <ul class="navigation">
+        <li><a class="menu"
+             href="#">&#9776; Menu</a></li>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">City</a></li>
+        <li><a href="#">Join</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
-      <div class="hero-container">
-        <picture class="hero">
-          <source media="(max-width: 300px)"
-                  srcset="images/plane-hero-300.jpg">
-          <source media="(max-width: 500px)"
-                  srcset="images/plane-hero-500.jpg">
-          <source media="(min-width: 960px)"
-                  srcset="images/plane-hero-960.jpg">
-          <img src="images/plane-hero-960.jpg"
-               alt="hero images">
-        </picture>
+    <div class="hero-container">
+      <picture class="hero">
+        <source media="(max-width: 300px)"
+                srcset="images/plane-hero-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/plane-hero-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/plane-hero-960.jpg">
+        <img src="images/plane-hero-960.jpg"
+             alt="hero images">
+      </picture>
   </main>
 
   <footer>
@@ -102,12 +102,14 @@
       <p> &copy; <span id="copyrightyear"></span> &#160; Del City Chamber of Commerce | <span id="currentyear"></span>
       </p>
 
-      <a href="#"><img src="images/full-site-images/facebook.png"
-             alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/full-site-images/instagram.png"
-             alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/full-site-images/twitter.png"
-             alt="Sunshine Forecast's Twitter site link."></a>
+      <a href="#"><img src="images/facebook.png"
+             alt="Del City Chamber of Commerce's Facebook page link."></a>
+      <a href="#"><img src="images/instagram.png"
+             alt="Del City Chamber of Commerce's Instagram account link."></a>
+      <a href="#"><img src="images/twitter.png"
+             alt="Del City Chamber of Commerce's Twitter site link."></a>
+      <a href="#"><img src="images/youtube.png"
+             alt="Del City Chamber of Commerce's YouTube site link."></a>
     </div>
 
   </footer>
