--- a/delcitychamberofcommerce/city.html
+++ b/delcitychamberofcommerce/city.html
@@ -25,8 +25,12 @@
   <link rel="stylesheet"
         href="css/large.css">
 
+
+
   <script defer
           src="js/script.js"></script>
+
+
 
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
@@ -41,17 +45,19 @@
 <body>
 
   <header>
+
     <img src="images/icon.png"
-          alt="an terra cotta color plane icon">
-    <section> 
+         alt="an terra cotta color plane icon">
+
+    <section>
       <h1>Del City</h1>
       <p>Chamber of Commerce</p>
     </section>
-  
+
     <nav>
       <ul class="navigation">
         <li><a class="menu"
-             href="#">&#9776;</a></li>
+             href="#">&#9776; Menu</a></li>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">City</a></li>
         <li><a href="#">Join</a></li>
@@ -59,41 +65,23 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-</header>
+  </header>
   <main>
-    <div class="first">
+      <div class="title"><h2>Event Calendar</h2></div>
+
     
-      <div class="hero-container">
-        <div class="center">
-        <h2>Welcome to the</h2> 
-        <h2>DEL CITY</h2>
-        <h2>Chamber of Commerce</h2>
-      </div>
-        <picture class="hero">
-          <source media="(max-width: 300px)"
-                  srcset="images/plane-hero-300.jpg">
-          <source media="(max-width: 500px)"
-                  srcset="images/plane-hero-500.jpg">
-          <source media="(min-width: 960px)"
-                  srcset="images/plane-hero-960.jpg">
-          <img src="images/plane-hero-960.jpg"
-              alt="hero images">
-        </picture>
-        <div class="cards">
-          <div><a href="#">Directory</a></div>
-          <div><a href="#">Join</a></div>
-          <div><a href="#">Events</a></div>
-      </div>
-        <div><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for.</p>
-        <ul>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-        </ul>
-      </div>
+      <div><a href="#">Directory</a></div>
+      <div><a href="#">Join</a></div>
+      <div><a href="#">Events</a></div>
+      <div><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for.</p>
+      <ul>
+        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
+        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
+        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
+        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
+      </ul>
     </div>
-    <div class="second">
+    <div>
       <h2>Spot Lights</h2>
       <img src="images/placeholder-300x400.jpg" alt="#">
       <img src="images/placeholder-300x400.jpg" alt="#">
@@ -103,14 +91,14 @@
       <img src="images/placeholder-300x400.jpg" alt="#">
       <button>View Directory</button>
     </div>
-    <div class="third">
+    <div>
       <h2>Upcoming Events</h2>
       <img src="images/placeholder-300x240.jpg" alt="#">
       <img src="images/placeholder-300x240.jpg" alt="#">
       <img src="images/placeholder-300x240.jpg" alt="#">
 
     </div>
-    <div class="first">
+    <div>
       <h2>Local Weather</h2>
       <img src="images/placeholder-250x250.jpg" alt="#">
       <img src="images/placeholder-250x250.jpg" alt="#">
