--- a/delcitychamberofcommerce/join.html
+++ b/delcitychamberofcommerce/join.html
@@ -61,37 +61,8 @@
     </nav>
 </header>
   <main>
-    <div class="odd">
-    
-      <div class="hero-container">
-        <div class="center">
-        <h2>Welcome to the</h2> 
-        <h2>DEL CITY</h2>
-        <h2>Chamber of Commerce</h2>
-      </div>
-        <picture class="hero">
-          <source media="(max-width: 300px)"
-                  srcset="images/plane-hero-300.jpg">
-          <source media="(max-width: 500px)"
-                  srcset="images/plane-hero-500.jpg">
-          <source media="(min-width: 960px)"
-                  srcset="images/plane-hero-960.jpg">
-          <img src="images/plane-hero-960.jpg"
-              alt="hero images">
-        </picture>
-        <div class="cards">
-          <div><a href="#">Directory</a></div>
-          <div><a href="#">Join</a></div>
-          <div><a href="#">Events</a></div>
-      </div>
-        <div><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for.</p>
-        <ul>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-          <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-        </ul>
-      </div>
+    <div class="sub-title">
+      <h2>Join</h2>
     </div>
     <div class="even">
       <h2>Spot Lights</h2>
