--- a/delcitychamberofcommerce/city.html
+++ b/delcitychamberofcommerce/city.html
@@ -8,9 +8,9 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
 
-  <title>Del City Chamber of Commerce</title>
+  <title>Del City Information</title>
   <meta name="description"
-        content="#">
+        content="Del City information past, present, and future events.">
 
   <link rel="shortcut icon"
         href="images/plane.ico">
@@ -25,12 +25,8 @@
   <link rel="stylesheet"
         href="css/large.css">
 
-
-
   <script defer
           src="js/script.js"></script>
-
-
 
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
@@ -45,19 +41,17 @@
 <body>
 
   <header>
-
     <img src="images/icon.png"
-         alt="an terra cotta color plane icon">
-
-    <section>
+          alt="an terra cotta color plane icon">
+    <section> 
       <h1>Del City</h1>
       <p>Chamber of Commerce</p>
     </section>
-
+  
     <nav>
       <ul class="navigation">
         <li><a class="menu"
-             href="#">&#9776; Menu</a></li>
+             href="#">&#9776;</a></li>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">City</a></li>
         <li><a href="#">Join</a></li>
@@ -65,23 +59,12 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-  </header>
+</header>
   <main>
-      <div class="title"><h2>Event Calendar</h2></div>
-
-    
-      <div><a href="#">Directory</a></div>
-      <div><a href="#">Join</a></div>
-      <div><a href="#">Events</a></div>
-      <div><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for.</p>
-      <ul>
-        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-        <li> hendrerit leo consequat magna tempor, id mattis lectus dapibus.</li>
-      </ul>
+    <div class="sub-title">
+      <h2>City</h2>
     </div>
-    <div>
+    <div class="even">
       <h2>Spot Lights</h2>
       <img src="images/placeholder-300x400.jpg" alt="#">
       <img src="images/placeholder-300x400.jpg" alt="#">
@@ -91,14 +74,15 @@
       <img src="images/placeholder-300x400.jpg" alt="#">
       <button>View Directory</button>
     </div>
-    <div>
+
+    <div class="odd">
       <h2>Upcoming Events</h2>
       <img src="images/placeholder-300x240.jpg" alt="#">
       <img src="images/placeholder-300x240.jpg" alt="#">
       <img src="images/placeholder-300x240.jpg" alt="#">
-
     </div>
-    <div>
+
+    <div class="even">
       <h2>Local Weather</h2>
       <img src="images/placeholder-250x250.jpg" alt="#">
       <img src="images/placeholder-250x250.jpg" alt="#">
