--- a/delcitychamberofcommerce/city.html
+++ b/delcitychamberofcommerce/city.html
@@ -52,42 +52,32 @@
       <ul class="navigation">
         <li><a class="menu"
              href="#">&#9776;</a></li>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">City</a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="#">City</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="directory.html">Business</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 </header>
   <main>
     <div class="sub-title">
-      <h2>City</h2>
+      <h2>Del City</h2>
     </div>
     <div class="even">
-      <h2>Spot Lights</h2>
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <button>View Directory</button>
-    </div>
+      <h2>Historic Background</h2>
+      <p>In 1946 Del City started out as 160 acres, approximately seven and half miles between Oklahoma City and Midwest City property investment for George Epperly with a plan to build 50 homes using track home building practices to keep costs down. Mr. Epperly’s homes sold faster then they could finish and by the end of 1948 became a part of Oklahoma with a population of two hundred families. Del City area was so named for his daughter, Delaphene.</p>
 
+    </div>
     <div class="odd">
-      <h2>Upcoming Events</h2>
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-    </div>
-
-    <div class="even">
-      <h2>Local Weather</h2>
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
+      <h2>Current Del City (2019)</h2>
+      <p>
+        Population: 21,822 
+      </p>
+      <p>
+        Income: $46,485
+      </p>
     </div>
    
   </main>
