--- a/delcitychamberofcommerce/contact.html
+++ b/delcitychamberofcommerce/contact.html
@@ -52,11 +52,12 @@
       <ul class="navigation">
         <li><a class="menu"
              href="#">&#9776;</a></li>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">City</a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="city.html">City</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="directory.html">Business</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li class="active"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 </header>
@@ -66,29 +67,8 @@
     </div>
 
     <div class="even">
-      <h2>Spot Lights</h2>
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <button>View Directory</button>
-    </div>
-
-    <div class="odd">
-      <h2>Upcoming Events</h2>
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-    </div>
-
-    <div class="even">
-      <h2>Local Weather</h2>
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
+      <h2>Connect With Us!</h2>
+    
     </div>
    
   </main>
