--- a/delcitychamberofcommerce/join.html
+++ b/delcitychamberofcommerce/join.html
@@ -52,11 +52,12 @@
       <ul class="navigation">
         <li><a class="menu"
              href="#">&#9776;</a></li>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">City</a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="city.html">City</a></li>
+        <li class="active"><a href="#">Join</a></li>
+        <li><a href="directory.html">Business</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 </header>
@@ -65,30 +66,89 @@
       <h2>Join</h2>
     </div>
     <div class="even">
-      <h2>Spot Lights</h2>
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <img src="images/placeholder-300x400.jpg" alt="#">
-      <button>View Directory</button>
-    </div>
+      <div class="grid">
+        <div>
+          <fieldset>
+            <legend>Membership Application</legend>
+            <form name="myForm"
+                  action="thanks.html"
+                  method="get"
+                  class="membershipForm">
 
-    <div class="odd">
-      <h2>Upcoming Events</h2>
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-      <img src="images/placeholder-300x240.jpg" alt="#">
-    </div>
+              <label class="top">* First Name: <input type="text"
+                       name="First Name"
+                       pattern="[a-zA-Z]{2, }"
+                       required>
+              </label>
 
-    <div class="even">
-      <h2>Local Weather</h2>
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
-      <img src="images/placeholder-250x250.jpg" alt="#">
+              <label class="top">* Last Name: <input type="text"
+                       name="Full Name"
+                       pattern="[a-zA-Z]{2, }"
+                       required>
+              </label>
+
+              <label class="top">Title: <input type="text"
+                       name="Title" pattern="{5, }">
+              </label>
+              <label class="top">Email: <input type="email"
+                       name="Email"
+                       placeholder="user@mydomain.com" required>
+              </label>
+              <label class="top">Cell Phone: <input type="tel"
+                       name="Phone">
+              </label>
+              <label class="top">Business Name: <input type="text"
+                name="Business Name" pattern="{5, }" required>
+              </label>
+
+              <label class="top">Address: <input type="text"
+                       name="Address">
+              </label>
+              <label class="top">City: <input type="text"
+                       name="City">
+              </label>
+              <label class="top">State: <input type="text"
+                       name="State">
+              </label>
+              <label class="top">Zip Code: <input type="number"
+                       name="Zip Code">
+              </label>
+              
+              <label class="top">Business Website: <input type="url"
+                name="Business Website"
+                placeholder="https://..."
+                pattern="https?://.+" >
+              </label>
+
+              <label class="top">Business Description: <textarea name="Business Description"
+                maxlength="500"></textarea>
+              </label>
+
+              <label for="fees"
+                     id="top">Membership Level:</label>
+              <label><input type="radio"
+                       id="fee1"
+                       name="personal-danger"
+                       value="100">Non-profit $100</label>
+              <label for="fee2"><input type="radio"
+                       id="fee2"
+                       name="personal-danger"
+                       value="200">Bronze $200</label>
+              <label for="fee3"><input type="radio"
+                       id="fee3"
+                       name="personal-danger"
+                       value="400">Silver $400</label>
+              <label for="fee4"><input type="radio"
+                       id="fee4"
+                       name="personal-danger"
+                       value="10000">Gold $1000</label>
+              <br>
+              <button type="submit"
+                      class="reportBtn">Join </button>
+            </form>
+  
     </div>
+      
    
   </main>
 
@@ -104,9 +164,9 @@
           <span class="postal-code">73115</span>
         </a>
       </div>
-      <div class="tel">(405) 677-1910</div>
-      <br>
-      <div class="email"><a href="mailto:delcitychamberofcommerce@gmail.com">delcitychamberofcommerce@gmail.com</a>
+        <div class="tel">(405) 677-1910</div>
+        <br>
+        <div class="email"><a href="mailto:delcitychamberofcommerce@gmail.com">delcitychamberofcommerce@gmail.com</a>
       </div>
 
     </div>
