--- a/delcitychamberofcommerce/team.html
+++ b/delcitychamberofcommerce/team.html
@@ -58,11 +58,12 @@
       <ul class="navigation">
         <li><a class="menu"
              href="#">&#9776; Menu</a></li>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">City</a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="city.html">City</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="directory.html">Business</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
