--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -36,7 +36,7 @@
 
 <body>
   <header>
-    <h1>Design Principles Document
+    <h1>Design Principles Document- HI!
     </h1>
     <h2>Barbara Chamberlin</h2>
 
